--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
